apps/hass/portainer/portainer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: hass
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: portainer
        image: portainer/portainer-ee:2.21.5
        ports:
        - containerPort: 9443
          name: https
          protocol: TCP
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
        - name: portainer-data
          mountPath: /data
        resources:
          requests:
            memory: 100Mi
            cpu: "5m"
          limits:
            memory: 200Mi
        livenessProbe: &probe
          httpGet:
            path: /api/settings/public
            port: https
            scheme: HTTPS
        readinessProbe: *probe
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: portainer-data
        persistentVolumeClaim:
          claimName: portainer-pvc
