apps/hass/portainer/portainer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: hass
  labels:
    app: portainer
spec:
  selector:
    app: portainer
  ports:
  - port: 9443
    protocol: TCP
    targetPort: 9443
    name: https
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: http
  type: ClusterIP
  clusterIP: None
